--- a/widgets/_quick-settings.scss
+++ b/widgets/_quick-settings.scss
@@ -84,12 +84,11 @@
     & .icon {
       icon-size: $base_icon_size*1.5; // a non-standard symbolic size but ok
       border-radius: 999px;
-      border: 1px solid $borders_color;
+      border: 1px solid $insensitive_borders_color;
       padding: 1.5 * $base_padding;
       background-color: lighten($bg_color, 10%);
       @if $variant == 'light' {
       	background-color: white;
-      	border: 1px solid $borders_color;
       	}
 
       &.active { color: white; background-color: $selected_bg_color; border-color: transparent;}
