--- a/widgets/_quick-settings.scss
+++ b/widgets/_quick-settings.scss
@@ -84,14 +84,13 @@
     & .icon {
       icon-size: $base_icon_size*1.5; // a non-standard symbolic size but ok
       border-radius: 999px;
-      border: 1px solid $insensitive_borders_color;
       padding: 1.5 * $base_padding;
       background-color: lighten($bg_color, 10%);
       @if $variant == 'light' {
-      	background-color: white;
+      	background-color: $light_1;
       	}
 
-      &.active { color: white; background-color: $selected_bg_color; border-color: $selected_bg_color; }
+      &.active { color: $light_1; background-color: $selected_bg_color; }
     }
 
     & .title {
