--- a/_colors.scss
+++ b/_colors.scss
@@ -9,13 +9,13 @@ $_dark_base_color: darken(desaturate(#241f31, 100%), 2%);
 
 $base_color: if($variant == 'light', #fff, $_dark_base_color);
 $bg_color: if($variant == 'light', #f6f5f4, lighten($base_color, 5%));
-$fg_color: if($variant == 'light', $_dark_base_color, white);
+$fg_color: if($variant == 'light', transparentize(black, .2), white);
 
 $selected_fg_color: #fff;
 $selected_bg_color: #3584e4;
 $selected_borders_color: if($variant== 'light', darken($selected_bg_color, 15%), darken($selected_bg_color, 30%));
 
-$borders_color: if($variant == 'light', transparentize($fg_color, .85), transparentize($fg_color, .9));
+$borders_color: if($variant == 'light', transparentize($fg_color, .5), transparentize($fg_color, .9));
 $borders_edge: if($variant == 'light', rgba(255,255,255,0.8), lighten($bg_color, 5%));
 
 $link_color: if($variant == 'light', darken($selected_bg_color, 10%), lighten($selected_bg_color, 20%));
