--- a/widgets/_app-grid.scss
+++ b/widgets/_app-grid.scss
@@ -239,10 +239,10 @@ $app_icon_size: 96px;
   > StIcon { color: $system_fg_color;}
 
   @if $is_highcontrast {
-    @include button(normal, $system_fg_color, transparentize($system_bg_color, 0.5));
+    @include button(normal, $system_fg_color, transparentize($system_fg_color, 0.5));
   }
 
-  &:insensitive { @include button(undecorated, $system_fg_color, transparentize($system_bg_color, 0.5));}
-  &:hover { @include button(hover, $system_fg_color, transparentize($system_bg_color, 0.5));}
-  &:active { @include button(active, $system_fg_color, transparentize($system_bg_color, 0.5));}
+  &:insensitive { @include button(undecorated, $system_fg_color, transparentize($system_fg_color, 0.5));}
+  &:hover { @include button(hover, $system_fg_color, transparentize($system_fg_color, 0.5));}
+  &:active { @include button(active, $system_fg_color, transparentize($system_fg_color, 0.5));}
 }
