--- a/widgets/_panel.scss
+++ b/widgets/_panel.scss
@@ -2,7 +2,7 @@
 // a.k.a. the panel
 
 $panel_bg_color: if($variant == 'light', $light_3, $dark_5);
-$panel_fg_color: if($variant == 'light', $_dark_base_color, darken($fg_color, 5%));
+$panel_fg_color: if($variant == 'light', transparentize(black, .2), darken($fg_color, 5%));
 $panel_height: 2.2em;
 $panel_transition_duration: 250ms; // same as the overview transition duration
 
@@ -64,6 +64,7 @@ $panel_transition_duration: 250ms; // same as the overview transition duration
 
     &:active, &:overview, &:focus, &:checked {
       box-shadow: inset 0 0 0 100px transparentize($panel_fg_color, 0.8);
+      @if $variant == 'light' { box-shadow: inset 0 0 0 100px transparentize($panel_fg_color, 0.7); }
 
       // The clock display needs to have the background on .clock because
       // we want to exclude the do-not-disturb indicator from the background
@@ -72,6 +73,7 @@ $panel_transition_duration: 250ms; // same as the overview transition duration
 
         .clock {
           box-shadow: inset 0 0 0 100px transparentize($panel_fg_color, 0.8);
+          @if $variant == 'light' { box-shadow: inset 0 0 0 100px transparentize($panel_fg_color, 0.7); }
         }
       }
 
@@ -85,10 +87,12 @@ $panel_transition_duration: 250ms; // same as the overview transition duration
 
     &:hover {
       box-shadow: inset 0 0 0 100px transparentize($panel_fg_color, 0.85);
+      @if $variant == 'light' { box-shadow: inset 0 0 0 100px transparentize($panel_fg_color, 0.75); }
       &.clock-display {
         box-shadow: none;
         .clock {
           box-shadow: inset 0 0 0 100px transparentize($panel_fg_color, 0.85);
+          @if $variant == 'light' { box-shadow: inset 0 0 0 100px transparentize($panel_fg_color, 0.75); }
         }
       }
 
@@ -102,10 +106,12 @@ $panel_transition_duration: 250ms; // same as the overview transition duration
     
     &:active:hover, &:overview:hover, &:focus:hover, &:checked:hover {
       box-shadow: inset 0 0 0 100px transparentize($panel_fg_color, 0.75);
+      @if $variant == 'light' { box-shadow: inset 0 0 0 100px transparentize($panel_fg_color, 0.65); }
       &.clock-display {
         box-shadow: none;
         .clock {
           box-shadow: inset 0 0 0 100px transparentize($panel_fg_color, 0.75);
+          @if $variant == 'light' { box-shadow: inset 0 0 0 100px transparentize($panel_fg_color, 0.65); }
         }
       }
 
