--- a/widgets/_app-grid.scss
+++ b/widgets/_app-grid.scss
@@ -245,4 +245,9 @@ $app_icon_size: 96px;
   &:insensitive { @include button(undecorated, $system_fg_color, transparentize($system_fg_color, 0.5));}
   &:hover { @include button(hover, $system_fg_color, transparentize($system_fg_color, 0.5));}
   &:active { @include button(active, $system_fg_color, transparentize($system_fg_color, 0.5));}
+  @if $variant == 'light' {
+    &:insensitive > StIcon { @include button(undecorated, $osd_fg_color, transparentize($osd_fg_color, 0.9));}
+    &:hover > StIcon { @include button(hover, $osd_fg_color, transparentize($osd_fg_color, 0.9));}
+    &:active > StIcon { @include button(active, $osd_fg_color, transparentize($osd_fg_color, 0.9));}
+  }
 }
