--- a/widgets/_app-grid.scss
+++ b/widgets/_app-grid.scss
@@ -242,12 +242,12 @@ $app_icon_size: 96px;
     @include button(normal, $system_fg_color, transparentize($system_bg_color, 0.5));
   }
 
-  &:insensitive { @include button(undecorated, $system_fg_color, transparentize($system_fg_color, 0.5));}
+  &:insensitive { @include button(undecorated, $system_fg_color, transparentize($system_bg_color, 0.5));}
   &:hover { @include button(hover, $system_fg_color, transparentize($system_bg_color, 0.5));}
   &:active { @include button(active, $system_fg_color, transparentize($system_bg_color, 0.5));}
   @if $variant == 'light' {
-    &:insensitive { @include button(undecorated, $osd_fg_color, transparentize($osd_fg_color, 0.9));}
-    &:hover { @include button(hover, $osd_fg_color, transparentize($osd_fg_color, 0.9));}
-    &:active { @include button(active, $osd_fg_color, transparentize($osd_fg_color, 0.9));}
+    &:insensitive { @include button(undecorated, $system_fg_color, transparentize($system_fg_color, 0.9));}
+    &:hover { @include button(hover, $system_fg_color, transparentize($system_fg_color, 0.9));}
+    &:active { @include button(active, $system_fg_color, transparentize($system_fg_color, 0.9));}
   }
 }
