--- a/_drawing.scss
+++ b/_drawing.scss
@@ -418,29 +418,18 @@
 
 // styling for elements within popovers that look like notifications
 @mixin card($flat: false) {
-  border-radius: $base_border_radius;
+  border-radius: $base_border_radius*1.5;
   margin: $base_margin;
-  box-shadow: inset 0 0 0 1px $card_outer_borders_color;
 
   @if $flat {
     @include button(undecorated);
     box-shadow: none !important;
   } @else {
-    @include button(normal, $c:$card_bg_color);
+    @include button(normal);
   }
-
-  &:focus {
-    @include button(focus, $c:$card_bg_color);
-  }
-
-  &:hover {
-    @include button(hover, $c:$card_bg_color);
-  }
-
-  &:active {
-    @include button(active, $c:$card_bg_color);
-  }
-  
+  &:hover {@include button(hover);}
+  &:active {@include button(active);}
+  &:focus {@include button(focus);}
   &:insensitive {
     @include button(insensitive);
     @if $flat {
