--- a/widgets/_slider.scss
+++ b/widgets/_slider.scss
@@ -19,4 +19,5 @@ $slider_size: 16px;
   -slider-handle-radius: $slider_size * 0.5; // half the size of the size
   -slider-handle-border-width: 0;
   -slider-handle-border-color: transparent;
+  color: white;
 }
