--- a/widgets/_search-results.scss
+++ b/widgets/_search-results.scss
@@ -47,7 +47,7 @@
 }
 
 %search_section_content_item {
-  @include tile_button($system_bg_color);
+  @include tile_button(transparentize($system_bg_color, .05));
   border-radius: $base_border_radius+3px;
 }
 }  
