--- a/_drawing.scss
+++ b/_drawing.scss
@@ -2,7 +2,7 @@
 
 // generic drawing of more complex things
 
-@function draw_widget_edge($c:$outer_borders_color) {
+@function draw_widget_edge($c:$borders_edge) {
 // outer highlight "used" on most widgets
   @return 0 1px $c;
 }
@@ -23,42 +23,42 @@
   @else { box-shadow: $shadow1; }
 }
 
+// entries
 
-// Text entries
-@mixin entry($t, $c) {
+@mixin entry($t, $fc:$selected_bg_color) {
 //
 // Entries drawing function
 //
 // $t: entry type
-// $c: text color, used to derive background color of entries
+// $fc: focus color
 //
-// possible $t values: normal, focus, insensitive
+// possible $t values:
+// normal, focus, insensitive
 //
-  transition-duration: 100ms;
 
   @if $t==normal {
-    background-color: transparentize($c, 0.85);
-    color: transparentize($c,0.3);
-
-    @if $is_highcontrast {
-      box-shadow: inset 0 0 0 1px $hc_inset_color;
-    }
+    background-color: lighten($bg_color, 5%);
+    color: transparentize($fg_color,0.3);
+    border: 2px solid lighten($bg_color, 5%);
   }
 
   @if $t==focus {
-    background-color: mix(transparentize($c, 0.75), $selected_bg_color, 95%);
-    box-shadow: inset 0 0 0 2px transparentize($selected_bg_color, 0.3);
-    color: $c;
+    background-color: mix(lighten($bg_color, 5%), $selected_bg_color, 95%);
+    border-color: $fc;
+    color: $fg_color;
     &:hover {}
   }
 
   @if $t==hover {
-    background-color: transparentize($c, 0.75);
+    background-color:lighten($hover_bg_color, 5%);
+    border-color:lighten($hover_bg_color, 5%);
+    color: transparentize($fg_color,0.3);
   }
 
   @if $t==insensitive {
-    background-color:transparentize($c, 0.75);
-    color: transparentize($c, 0.5);
+    background-color:lighten($insensitive_bg_color, 5%);
+    border-color: lighten($insensitive_bg_color, 5%);
+    color: $insensitive_fg_color;
   }
 }
 
@@ -143,6 +143,116 @@
 //
 // since buttons are all flat an borderless now the mixin is simpler
 
+@mixin dbutton($t, $tc:$fg_color, $c:$bg_color, $flat: false) {
+
+  $button_bg_color: mix($tc, $c, $button_mix_factor);
+  transition-duration: 100ms;
+
+  // normal button
+  @if $t==normal {
+    color: $tc;
+    background-color: $button_bg_color;
+    @if $flat {
+      background-color: transparent;
+    }
+    @if $is_highcontrast == "true" {
+      box-shadow: inset 0 0 0 1px $button_inset_color;
+    }
+  }
+
+  // focused button
+  @if $t==focus {
+    color: $tc;
+    background-color: mix($button_bg_color, $selected_bg_color, 90%);
+    box-shadow: inset 0 0 0 2px transparentize($selected_bg_color, 0.4) !important;
+    &:hover {
+      background-color: mix(lighten($button_bg_color, 3%), $selected_bg_color, 90%);
+      box-shadow: inset 0 0 0 2px transparentize($selected_bg_color, 0.3) !important;
+    }
+    &:active {
+      background-color: mix(lighten($button_bg_color, 6%), $selected_bg_color, 90%);
+      box-shadow: inset 0 0 0 2px transparentize($selected_bg_color, 0.3) !important;
+    }
+  }
+
+  // hover button
+  @else if $t==hover {
+    color: $tc;
+    background-color: lighten($button_bg_color, 3%);
+
+    @if $is_highcontrast == "true" {
+      box-shadow: inset 0 0 0 1px lighten($button_inset_color, 3%);
+      background-color: mix(lighten($button_bg_color, 3%), $button_inset_color, 10%);
+    }
+  }
+
+  // active button
+  @else if $t==active {
+    color: $tc;
+    background-color:  lighten($button_bg_color, 6%);
+    @if $is_highcontrast == "true" {
+      box-shadow: inset 0 0 0 1px lighten($button_inset_color, 6%);
+      background-color: mix(lighten($button_bg_color, 6%), $button_inset_color, 10%);
+    }
+  }
+
+  // checked button
+  @else if $t==checked {
+    color: $tc;
+    background-color: lighten($button_bg_color, 9%);
+    @if $is_highcontrast == "true" {
+      box-shadow: inset 0 0 0 1px lighten($button_inset_color, 9%);
+      background-color: mix(lighten($button_bg_color, 9%), $button_inset_color, 10%);
+    }
+    &:hover { background-color: lighten($button_bg_color, 12%);}
+    &:active { background-color: lighten($button_bg_color, 15%);}
+  }
+
+  // insensitive button
+  @else if $t==insensitive {
+    color: transparentize($tc, 0.5);
+    background-color: transparentize($tc, .95);
+    @if $is_highcontrast == "true" {
+      box-shadow: inset 0 0 0 1px transparentize($button_inset_color, 0.5);
+    }
+  }
+
+  // default/suggested button
+  @else if $t==default {
+    background-color: $selected_bg_color;
+    color: $selected_fg_color;
+    box-shadow: none;
+    &:focus {
+      box-shadow: inset 0 0 0 2px lighten($selected_bg_color, 10%);
+    }
+    &:hover, &:focus { 
+      background-color: lighten($selected_bg_color, 5%);
+      color: lighten($selected_fg_color, 5%);
+    }
+    &:active {
+      background-color: darken($selected_bg_color, 7%);
+      color: darken($selected_fg_color, 7%);
+    }
+    &:insensitive {
+      @include button(insensitive);
+      background-color: transparentize($selected_bg_color, .5);
+      color: transparentize($selected_fg_color, .5);
+    }
+  }
+
+  // reset
+  @else if $t==undecorated {
+    background-color: transparent;
+    background-color: none;
+    box-shadow: none;
+    &:insensitive {
+      @include button(insensitive);
+      background-color: transparent;
+      color: transparentize($selected_fg_color, .5);
+    }
+  }
+}
+
 @mixin button($t, $tc:$fg_color, $c:$bg_color, $flat: false) {
 
   $button_bg_color: mix($tc, $c, $button_mix_factor);
@@ -155,7 +265,7 @@
     @if $flat {
       background-color: transparent;
     }
-    @if $is_highcontrast {
+    @if $is_highcontrast == "true" {
       box-shadow: inset 0 0 0 1px $hc_inset_color;
     }
   }
@@ -204,8 +314,8 @@
       box-shadow: inset 0 0 0 1px lighten($button_inset_color, 9%);
       background-color: mix(lighten($button_bg_color, 9%), $button_inset_color, 10%);
     }
-    &:hover { background-color: lighten($button_bg_color, 12%);}
-    &:active { background-color: lighten($button_bg_color, 15%);}
+    &:hover { background-color: if($variant == 'light', darken($button_bg_color, 12%), lighten($button_bg_color, 12%));}
+    &:active { background-color: if($variant == 'light', darken($button_bg_color, 15%), lighten($button_bg_color, 15%));}
   }
 
   // insensitive button
@@ -257,9 +367,6 @@
     background-color: transparent;
   } @else {
     background-color: transparentize($color, .84);
-    @if $is_highcontrast {
-      box-shadow: inset 999px 0 0 0 transparentize($color, .2); // bit of a hack
-    }
   }
   &:hover { background-color: transparentize($color, .9);}
   &:selected, &:focus {
@@ -282,15 +389,13 @@
 // overview icon, dash, app grid
 @mixin overview_icon($color, $flat: true) {
   transition-duration: 400ms;
-  .overview-icon {
-    @extend %tile;
-  }
+  .overview-icon { @extend %tile; }
   @if $flat {
     .overview-icon { background-color: transparent;}
   } @else {
-    .overview-icon { background-color: transparentize($color, .93); }
+    .overview-icon { background-color: transparentize($color, .81);}
   }
-  &:hover .overview-icon { background-color: transparentize($color, .87);}
+  &:hover .overview-icon { background-color: transparentize($color, .9);}
 
   &:selected .overview-icon,
   &:focus .overview-icon {
@@ -331,29 +436,4 @@
      background-color: transparent;
     }
   }
-}
-
-// styling for all menuitems in popovers
-@mixin menuitem($bg, $flat: true) {
-
-  // lighten the background color always
-  $bg: lighten($bg,5%);
-
-  font-weight: normal;
-  spacing: $base_padding;
-  transition-duration: 100ms;
-  padding: $base_padding*1.5 $base_padding*2;
-
-  @if $flat {
-    @include button(undecorated);
-    box-shadow: none !important;
-  } @else {
-    @include button(normal, $c:$bg);
-  }
-  &:focus,
-  &:hover {
-    @include button(hover, $c:$bg);
-  }
-  &:active {@include button(active, $c:$bg);}
-  &:checked {@include button(checked, $c:$bg);}
 }
