--- a/widgets/_dialogs.scss
+++ b/widgets/_dialogs.scss
@@ -5,9 +5,7 @@
 }
 
 .modal-dialog {
-  background-color: $bg_color;
-  border-radius: $modal_radius;
-  box-shadow: inset 0 0 0 1px $outer_borders_color;
+  @extend %bubble_panel;
 
   .modal-dialog-content-box {
     margin: 32px 40px;
@@ -133,6 +131,8 @@
   margin-bottom: 6px;
 
   .polkit-dialog-user-root-label { color: $warning_color; }
+  
+  .user-icon { color: $fg_color; }
 }
 
 /* Audio selection dialog */
