--- a/widgets/_looking-glass.scss
+++ b/widgets/_looking-glass.scss
@@ -2,23 +2,14 @@
 
 // Dialog
 #LookingGlassDialog {
-
-  @extend %osd_panel;
-  background-color: transparentize($osd_bg_color,0.02);
-  color: $osd_fg_color;
-
+  background-color: $osd_bg_color;
   border-radius: 0 0 $modal_radius $modal_radius;
-
   border-top-width: 0;
+  border: 1px solid $osd_outer_borders_color;
+  color: $osd_fg_color;
   padding: $base_padding;
   spacing: $base_padding;
   box-shadow: 0 2px 4px 0 $shadow_color;
-
-  @if $is_highcontrast {
-    border: 2px solid $hc_inset_color;
-    background-color: $osd_bg_color;
-    box-shadow:none;
-  }
 
   & > #Toolbar {
     border: none;
@@ -28,22 +19,39 @@
     spacing: $base_padding;
 
     .lg-toolbar-button {
-      @extend %osd_button;
       padding: $base_padding $base_padding*2;
+      @extend %button;
 
       & > StIcon { icon-size: $base_icon_size; }
     }
   }
 
-  .labels {
+  .labels { 
     spacing: $base_padding;
   }
 
   .notebook-tab {
-    @extend %osd_button;
     -natural-hpadding: $base_padding*2;
     -minimum-hpadding: $base_padding*2;
+
+    font-weight: bold;
     padding: $base_padding $base_padding*2;
+    color: darken($osd_fg_color, 15%);
+    transition-duration: 100ms;
+    box-shadow:none;
+    border:none;
+    border-radius: $base_border_radius - 2px;
+    background-color: transparent;
+
+    &:hover {
+      color: $osd_fg_color;
+      background-color: transparentize($osd_fg_color, 0.95);
+    }
+
+    &:selected {
+      color: $osd_fg_color;
+      background-color: transparentize($osd_fg_color, 0.9);
+    }
   }
 
   StBoxLayout#EvalBox { padding: 4px; spacing: $base_padding; padding: $base_padding; }
@@ -53,8 +61,12 @@
 .lg-dialog {
 
   StEntry {
-    @extend %osd_entry;
+    background-color: transparentize(lighten($osd_bg_color, 5%), 0.4);
+    color: $osd_fg_color;
+    border-color: transparentize($osd_fg_color, 0.8);
     min-height: 22px;
+    selection-background-color: $selected_bg_color;
+    selected-color: $selected_fg_color;
   }
 
   .shell-link {
@@ -82,10 +94,10 @@
 }
 
 .lg-obj-inspector-button {
-  border: 1px solid $borders_color;
+  border: 1px solid $osd_borders_color;
   padding: 4px;
   border-radius: $base_border_radius;
-  &:hover { border: 1px solid $fg_color; }
+  &:hover { border: 1px solid #ffffff; }
 }
 
 // Extensions
@@ -111,8 +123,8 @@
 
 // Inspector
 #LookingGlassPropertyInspector {
-  background: $bg_color;
-  border: 1px solid $borders_color;
+  background: $osd_bg_color;
+  border: 1px solid $osd_borders_color;
   border-radius: $base_border_radius;
   padding: $base_padding;
 }
@@ -120,9 +132,9 @@
 .lg-debug-flag-button {
   StLabel { padding: $base_padding, 2 * $base_padding; }
 
-  color: $osd_fg_color;
-  &:hover { color: lighten($osd_fg_color, 20%); }
-  &:active { color: darken($osd_fg_color, 20%); }
+  color: $fg_color;
+  &:hover { color: lighten($fg_color, 20%); }
+  &:active { color: darken($fg_color, 20%); }
 }
 
 .lg-debug-flags-header {
