--- a/widgets/_popovers.scss
+++ b/widgets/_popovers.scss
@@ -1,11 +1,5 @@
 /* Popovers/Menus */
 
-$menu_bg_color: $bg_color;
-$menuitem_bg_color: lighten($menu_bg_color, 4%);
-$menuitem_border_radius: $base_border_radius*1.5;
-
-$submenu_bg_color: lighten($menu_bg_color, 7%);
-
 // the popover itself
 .popup-menu-boxpointer {
   -arrow-rise: $base_margin+2px; // distance from the panel & screen edge
@@ -25,26 +19,44 @@ $submenu_bg_color: lighten($menu_bg_color, 7%);
 // popover content
 .popup-menu-content {
   padding: $base_padding;
-  background-color: $bg_color;
   border-radius: $modal_radius*1.25;
-  border: 1px solid $outer_borders_color;
+  border: 1px solid $borders_edge;
   box-shadow: 0 2px 4px 0 $shadow_color;
+  background-color: $bg_color;
 }
 
 // menu items
 .popup-menu-item {
-  @include menuitem($bg:$menu_bg_color);
+  padding: $base_padding*1.5 $base_padding*2;
+  border-radius: $base_border_radius*1.5;
+  spacing: $base_padding;
+  transition-duration: 100ms;
+  background-color: transparent;
 
-  border-radius: $menuitem_border_radius;
+  &:ltr {padding-left: $base_padding;}
+  &:rtl {padding-right: $base_padding;}
+
+  &:focus, &:hover {
+    background-color: $hover_bg_color !important;
+    &:active { background-color: $active_bg_color !important;}
+  }
+
+  &:checked {background-color: $checked_bg_color !important;}
 
   &:checked {
-    border-radius: $menuitem_border_radius $menuitem_border_radius 0 0 !important;
-
-    @if $is_highcontrast {
-      border: 1px solid $hc_inset_color;
-      border-bottom-width:0;
-    }
+    margin-bottom: 0;
+    box-shadow: inset 0 -1px 0 0 darken($checked_bg_color, 5%);
+    border-radius: $base_border_radius $base_border_radius 0 0;
+    &:focus,&:hover { background-color: lighten($checked_bg_color, 3%) !important;}
+    &:active { background-color: lighten($checked_bg_color, 5%) !important;}
   }
+
+  &:active {
+    background-color: lighten($active_bg_color, 5%);
+    color: $active_fg_color;
+  }
+
+  &:insensitive {color: transparentize($fg_color,0.5);}
 
   // add margin to switches in menu items
   .toggle-switch {
@@ -66,30 +78,34 @@ $submenu_bg_color: lighten($menu_bg_color, 7%);
   icon-size: 16px !important; // for some reason the variable doesn't work here
 }
 
+.popup-menu-arrow {
+}
+
+
 // popover submenus
 .popup-sub-menu {
-  border-radius: 0 0 $menuitem_border_radius+1px $menuitem_border_radius+1px;
-  margin-bottom: $base_padding;
-
-  @if $is_highcontrast {
-    border: 1px solid $hc_inset_color;
-  }
+  background-color: $checked_bg_color;
+  border-radius: 0 0 $base_border_radius $base_border_radius;
 
   .popup-menu-ornament {
-    icon-size: $base_icon_size !important;
-    width: $base_icon_size;
+    min-width: $base_icon_size !important;
   }
 
   // submenu specific styles
   .popup-menu-item {
     border-radius: 0;
-    @include menuitem($bg:$submenu_bg_color, $flat:false);
-    border-top-width:0;
+    margin: 0;
 
     &:last-child {
-      border-radius: 0 0 $menuitem_border_radius $menuitem_border_radius;
-      border-bottom-width:0;
+      border-radius: 0 0 $base_border_radius $base_border_radius;
     }
+
+    &:focus,&:hover { background-color: $hover_bg_color !important;}
+    &:checked {
+      background-color: $checked_bg_color !important;
+      &:focus,&:hover { background-color: lighten($checked_bg_color, 8%) !important;}
+    }
+    &:active { background-color: $active_bg_color !important;}
   }
 
   .popup-menu-section {
@@ -97,20 +113,27 @@ $submenu_bg_color: lighten($menu_bg_color, 7%);
       &:hover,&:focus { border-radius: 0;}
     }
     &:last-child .popup-menu-item:last-child {
-      border-radius: 0 0 $menuitem_border_radius $menuitem_border_radius;
+      border-radius: 0 0 $base_border_radius $base_border_radius;
     }
   }
 }
 
 // container for radio and check boxes
 .popup-menu-ornament {
-  icon-size: $base_icon_size !important;
-  width: $base_icon_size;
+  @extend %heading;
+  width: 1.2em;
+  text-align: center !important;
+
+  &:ltr { text-align: right;}
+  &:rtl { text-align: left;}
 }
 
 // separator
 .popup-separator-menu-item {
-  border:none !important;
+  margin: 6px 0;
+  padding:0 !important;
+  &:ltr { margin-right: $base_margin;}
+  &:rtl { margin-left: $base_margin;}
 
   .popup-separator-menu-item-separator {
     height: 1px; //not really the whole box
@@ -130,7 +153,7 @@ $submenu_bg_color: lighten($menu_bg_color, 7%);
     &:rtl { margin-left: 2.5em;}
 
     .popup-separator-menu-item-separator {
-      background-color: $borders_color;
+      background-color: lighten($borders_color, 7%);
     }
   }
 }
