--- a/widgets/_workspace-thumbnails.scss
+++ b/widgets/_workspace-thumbnails.scss
@@ -7,14 +7,8 @@
   padding: $base_padding;
 
   .workspace-thumbnail {
-    color: $system_fg_color;
-    background-color: lighten($system_bg_color, 10%);
-    border-radius: $base_border_radius*0.5;
-    border: 1px solid transparent;
-
-    @if $is_highcontrast {
-      border-color: $hc_inset_color;
-    }
+    @extend %overview_panel;
+    border-radius: 3px;
   }
 
   // drag and drop indicator
@@ -28,5 +22,7 @@
 // selected indicator
 .workspace-thumbnail-indicator {
   border: 3px solid $selected_bg_color;
-  border-radius: $base_border_radius;
+  border-radius: 3px;
+  padding: 0px;
+  // background-color: transparentize($selected_bg_color, 0.9);
 }
