--- a/_colors.scss
+++ b/_colors.scss
@@ -9,7 +9,7 @@ $_dark_base_color: darken(desaturate(#241f31, 100%), 2%);
 
 $base_color: if($variant == 'light', #fff, $_dark_base_color);
 $bg_color: if($variant == 'light', #f6f5f4, lighten($base_color, 5%));
-$fg_color: if($variant == 'light', transparentize(black, .2), white);
+$fg_color: if($variant == 'light', $_dark_base_color, white);
 
 $selected_fg_color: #fff;
 $selected_bg_color: #3584e4;
@@ -75,13 +75,13 @@ $active_bg_color: if($variant=='light', darken($bg_color, 5%), lighten($bg_color
 $active_fg_color: if($variant=='light', darken($fg_color, 5%), lighten($fg_color, 12%));
 
 // checked state
-$checked_bg_color: if($variant=='light', darken($bg_color, 9%), lighten($bg_color, 7%));
+$checked_bg_color: if($variant=='light', darken($bg_color, 11%), lighten($bg_color, 7%));
 $checked_fg_color: if($variant=='light', darken($fg_color, 7%), lighten($fg_color, 7%));
 
 // hover state
-$hover_bg_color: if($variant=='light', darken($bg_color,5%), lighten($bg_color, 10%));
+$hover_bg_color: if($variant=='light', darken($bg_color,7%), lighten($bg_color, 10%));
 $hover_fg_color: if($variant=='light', darken($fg_color,9%), lighten($fg_color, 10%));
 
 // active state
-$active_bg_color: if($variant=='light', darken($bg_color, 7%), lighten($bg_color, 12%));
+$active_bg_color: if($variant=='light', darken($bg_color, 9%), lighten($bg_color, 12%));
 $active_fg_color: if($variant=='light', darken($fg_color, 11%), lighten($fg_color, 12%));
