--- a/widgets/_panel.scss
+++ b/widgets/_panel.scss
@@ -2,7 +2,7 @@
 // a.k.a. the panel
 
 $panel_bg_color: if($variant == 'light', $light_3, $dark_5);
-$panel_fg_color: if($variant == 'light', transparentize(black, .2), darken($fg_color, 5%));
+$panel_fg_color: if($variant == 'light', $fg_color, darken($fg_color, 5%));
 $panel_height: 2.2em;
 $panel_transition_duration: 250ms; // same as the overview transition duration
 
@@ -63,8 +63,8 @@ $panel_transition_duration: 250ms; // same as the overview transition duration
     }
 
     &:active, &:overview, &:focus, &:checked {
-      box-shadow: inset 0 0 0 100px transparentize($panel_fg_color, 0.78);
-      @if $variant == 'light' { box-shadow: inset 0 0 0 100px transparentize($panel_fg_color, 0.68); }
+      box-shadow: inset 0 0 0 100px transparentize($panel_fg_color, 0.8);
+      @if $variant == 'light' { box-shadow: inset 0 0 0 100px transparentize($panel_fg_color, 0.85); }
 
       // The clock display needs to have the background on .clock because
       // we want to exclude the do-not-disturb indicator from the background
@@ -72,8 +72,8 @@ $panel_transition_duration: 250ms; // same as the overview transition duration
         box-shadow: none;
 
         .clock {
-          box-shadow: inset 0 0 0 100px transparentize($panel_fg_color, 0.78);
-          @if $variant == 'light' { box-shadow: inset 0 0 0 100px transparentize($panel_fg_color, 0.68); }
+          box-shadow: inset 0 0 0 100px transparentize($panel_fg_color, 0.8);
+          @if $variant == 'light' { box-shadow: inset 0 0 0 100px transparentize($panel_fg_color, 0.85); }
         }
       }
 
@@ -86,13 +86,13 @@ $panel_transition_duration: 250ms; // same as the overview transition duration
     }
 
     &:hover {
-      box-shadow: inset 0 0 0 100px transparentize($panel_fg_color, 0.84);
-      @if $variant == 'light' { box-shadow: inset 0 0 0 100px transparentize($panel_fg_color, 0.74); }
+      box-shadow: inset 0 0 0 100px transparentize($panel_fg_color, 0.85);
+      @if $variant == 'light' { box-shadow: inset 0 0 0 100px transparentize($panel_fg_color, 0.9); }
       &.clock-display {
         box-shadow: none;
         .clock {
-          box-shadow: inset 0 0 0 100px transparentize($panel_fg_color, 0.84);
-          @if $variant == 'light' { box-shadow: inset 0 0 0 100px transparentize($panel_fg_color, 0.74); }
+          box-shadow: inset 0 0 0 100px transparentize($panel_fg_color, 0.85);
+          @if $variant == 'light' { box-shadow: inset 0 0 0 100px transparentize($panel_fg_color, 0.9); }
         }
       }
 
@@ -106,12 +106,12 @@ $panel_transition_duration: 250ms; // same as the overview transition duration
     
     &:active:hover, &:overview:hover, &:focus:hover, &:checked:hover {
       box-shadow: inset 0 0 0 100px transparentize($panel_fg_color, 0.75);
-      @if $variant == 'light' { box-shadow: inset 0 0 0 100px transparentize($panel_fg_color, 0.65); }
+      @if $variant == 'light' { box-shadow: inset 0 0 0 100px transparentize($panel_fg_color, 0.8); }
       &.clock-display {
         box-shadow: none;
         .clock {
           box-shadow: inset 0 0 0 100px transparentize($panel_fg_color, 0.75);
-          @if $variant == 'light' { box-shadow: inset 0 0 0 100px transparentize($panel_fg_color, 0.65); }
+          @if $variant == 'light' { box-shadow: inset 0 0 0 100px transparentize($panel_fg_color, 0.8); }
         }
       }
 
