--- a/widgets/_workspace-thumbnails.scss
+++ b/widgets/_workspace-thumbnails.scss
@@ -8,7 +8,7 @@
 
   .workspace-thumbnail {
     color: $system_fg_color;
-    background-color: if( $variant == 'light', (transparentize($bg_color, .93), ($system_bg_color, 10%));
+    background-color: if( $variant == 'light', (transparentize($bg_color, .93), lighten($system_bg_color, 10%));
     border-radius: $base_border_radius*0.5;
     border: 1px solid transparent;
 
