--- a/widgets/_panel.scss
+++ b/widgets/_panel.scss
@@ -47,10 +47,12 @@ $panel_transition_duration: 250ms; // same as the overview transition duration
     }
 
     &.screen-recording-indicator {
+      color: $panel_system_fg_color;
       box-shadow: inset 0 0 0 100px $screenshot_ui_button_red;
     }
 
     &.screen-sharing-indicator {
+      color: $panel_system_fg_color;
       box-shadow: inset 0 0 0 100px $warning_color;
       StBoxLayout { margin: 0 $base_padding; }
     }
